through question about filtering and its not working

--- a/notebooks/GDP_notebook.ipynb
+++ b/notebooks/GDP_notebook.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "39902c0e",
+   "metadata": {},
+   "source": [
+    "##\n",
+    "Import packages: "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "63532ee7",
@@ -14,6 +23,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "97486325",
+   "metadata": {},
+   "source": [
+    "##\n",
+    "Call matplotlib inline"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "df803027",
@@ -24,18 +42,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "7e321da5",
+   "cell_type": "markdown",
+   "id": "3a7fd57a",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "gdp_df=pd.read_csv('../data/gdp_percapita.csv',nrows=6869)"
+    "##\n",
+    "read in files and check data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
+   "id": "7e321da5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdp_df=pd.read_csv('../data/gdp_percapita.csv',nrows=6868)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "3d75443d",
    "metadata": {},
    "outputs": [
@@ -115,7 +142,7 @@
        "4     Afghanistan  2015  2068.265904              NaN"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,34 +153,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "7ebc96ba",
    "metadata": {},
    "outputs": [],
    "source": [
-    "internet_df=pd.read_csv('../data/internet_use.csv',nrows=4496)"
+    "internet_df=pd.read_csv('../data/internet_use.csv',nrows=4495)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "181a616d",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 6869 entries, 0 to 6868\n",
+      "RangeIndex: 6868 entries, 0 to 6867\n",
       "Data columns (total 4 columns):\n",
       " #   Column           Non-Null Count  Dtype  \n",
       "---  ------           --------------  -----  \n",
-      " 0   Country or Area  6869 non-null   object \n",
-      " 1   Year             6869 non-null   object \n",
+      " 0   Country or Area  6868 non-null   object \n",
+      " 1   Year             6868 non-null   int64  \n",
       " 2   Value            6868 non-null   float64\n",
       " 3   Value Footnotes  1 non-null      float64\n",
-      "dtypes: float64(2), object(2)\n",
+      "dtypes: float64(2), int64(1), object(1)\n",
       "memory usage: 214.8+ KB\n",
       "None\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
@@ -181,13 +210,15 @@
    "id": "f9e745c5",
    "metadata": {},
    "source": [
+    "##\n",
+    "check size of dataframes \n",
     "1. gdp_df has 4 columns and 6,868 rows (not including headers)\n",
     "2. Internet_df has 4 columns and 4495 rows (not including headers) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "baa2fedf",
    "metadata": {},
    "outputs": [
@@ -195,17 +226,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     Country or Area      Year        Value  Value Footnotes\n",
-      "6859        Zimbabwe      1998  3653.920016              NaN\n",
-      "6860        Zimbabwe      1997  3580.048793              NaN\n",
-      "6861        Zimbabwe      1996  3520.430146              NaN\n",
-      "6862        Zimbabwe      1995  3226.413930              NaN\n",
-      "6863        Zimbabwe      1994  3263.934978              NaN\n",
-      "6864        Zimbabwe      1993  3033.504852              NaN\n",
-      "6865        Zimbabwe      1992  3054.889178              NaN\n",
-      "6866        Zimbabwe      1991  3426.598094              NaN\n",
-      "6867        Zimbabwe      1990  3324.348171              NaN\n",
-      "6868   footnoteSeqID  Footnote          NaN              NaN\n",
+      "     Country or Area  Year        Value  Value Footnotes\n",
+      "6858        Zimbabwe  1999  3600.849291              NaN\n",
+      "6859        Zimbabwe  1998  3653.920016              NaN\n",
+      "6860        Zimbabwe  1997  3580.048793              NaN\n",
+      "6861        Zimbabwe  1996  3520.430146              NaN\n",
+      "6862        Zimbabwe  1995  3226.413930              NaN\n",
+      "6863        Zimbabwe  1994  3263.934978              NaN\n",
+      "6864        Zimbabwe  1993  3033.504852              NaN\n",
+      "6865        Zimbabwe  1992  3054.889178              NaN\n",
+      "6866        Zimbabwe  1991  3426.598094              NaN\n",
+      "6867        Zimbabwe  1990  3324.348171              NaN\n",
       "     Country or Area      Year     Value  Value Footnotes\n",
       "4486        Zimbabwe      2001  0.799846              NaN\n",
       "4487        Zimbabwe      2000  0.401434              NaN\n",
@@ -226,8 +257,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ece58e0e",
+   "metadata": {},
+   "source": [
+    "##\n",
+    "Drop column from both tables. Used inplace to replace tables rather than duplicate them. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "dc13b6f8",
    "metadata": {},
    "outputs": [],
@@ -237,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "id": "374079ef",
    "metadata": {},
    "outputs": [],
@@ -247,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "id": "1aac26c7",
    "metadata": {},
    "outputs": [
@@ -256,14 +296,14 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 6869 entries, 0 to 6868\n",
+      "RangeIndex: 6868 entries, 0 to 6867\n",
       "Data columns (total 3 columns):\n",
       " #   Column           Non-Null Count  Dtype  \n",
       "---  ------           --------------  -----  \n",
-      " 0   Country or Area  6869 non-null   object \n",
-      " 1   Year             6869 non-null   object \n",
+      " 0   Country or Area  6868 non-null   object \n",
+      " 1   Year             6868 non-null   int64  \n",
       " 2   Value            6868 non-null   float64\n",
-      "dtypes: float64(1), object(2)\n",
+      "dtypes: float64(1), int64(1), object(1)\n",
       "memory usage: 161.1+ KB\n",
       "None\n"
      ]
@@ -275,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "id": "7a8dc1b1",
    "metadata": {},
    "outputs": [
@@ -302,9 +342,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "958c7746",
+   "metadata": {},
+   "source": [
+    "##\n",
+    "Rename columns in both tables. Used inplace to replace column names instead of create duplicate table. Printed each table to check results. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "8491914b",
+   "execution_count": 12,
+   "id": "49fd70e3",
    "metadata": {},
    "outputs": [
     {
@@ -312,14 +361,14 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 6869 entries, 0 to 6868\n",
+      "RangeIndex: 6868 entries, 0 to 6867\n",
       "Data columns (total 3 columns):\n",
       " #   Column          Non-Null Count  Dtype  \n",
       "---  ------          --------------  -----  \n",
-      " 0   Country         6869 non-null   object \n",
-      " 1   Year            6869 non-null   object \n",
+      " 0   Country         6868 non-null   object \n",
+      " 1   Year            6868 non-null   int64  \n",
       " 2   GDP_Per_Capita  6868 non-null   float64\n",
-      "dtypes: float64(1), object(2)\n",
+      "dtypes: float64(1), int64(1), object(1)\n",
       "memory usage: 161.1+ KB\n",
       "None\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
@@ -344,9 +393,349 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d3169b36",
+   "metadata": {},
+   "source": [
+    "##\n",
+    "Merge the two DataFrames to one. Merge all rows from each of the two DataFrames. Call the new DataFrame gdp_and_internet_use.\n",
+    "Used a concat. Why don't you specify join here? Specified outer join and it results in incorrect rows further into questions.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "8c11b7e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 11363 entries, 0 to 11362\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column              Non-Null Count  Dtype  \n",
+      "---  ------              --------------  -----  \n",
+      " 0   Country             11363 non-null  object \n",
+      " 1   Year                11363 non-null  int64  \n",
+      " 2   GDP_Per_Capita      6868 non-null   float64\n",
+      " 3   Internet_Users_Pct  4495 non-null   float64\n",
+      "dtypes: float64(2), int64(1), object(1)\n",
+      "memory usage: 355.2+ KB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "gdp_and_internet_use=pd.concat([gdp_df, internet_df], ignore_index=True)\n",
+    "print(gdp_and_internet_use.info())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f07cf127",
+   "metadata": {},
+   "source": [
+    "##Look at the first five rows of your new DataFrame to confirm it merged correctly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "524aba7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>GDP_Per_Capita</th>\n",
+       "      <th>Internet_Users_Pct</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2065.036398</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>2033.779002</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>2058.383832</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>2057.062164</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>2068.265904</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Country  Year  GDP_Per_Capita  Internet_Users_Pct\n",
+       "0  Afghanistan  2019     2065.036398                 NaN\n",
+       "1  Afghanistan  2018     2033.779002                 NaN\n",
+       "2  Afghanistan  2017     2058.383832                 NaN\n",
+       "3  Afghanistan  2016     2057.062164                 NaN\n",
+       "4  Afghanistan  2015     2068.265904                 NaN"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdp_and_internet_use.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e2e3223",
+   "metadata": {},
+   "source": [
+    "##\n",
+    "Look at the last five rows to make sure the data is clean and as expected."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "27b2b916",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>GDP_Per_Capita</th>\n",
+       "      <th>Internet_Users_Pct</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>11358</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>1997</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.033080</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11359</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>1996</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.016790</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11360</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.007684</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11361</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.001739</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11362</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Country  Year  GDP_Per_Capita  Internet_Users_Pct\n",
+       "11358  Zimbabwe  1997             NaN            0.033080\n",
+       "11359  Zimbabwe  1996             NaN            0.016790\n",
+       "11360  Zimbabwe  1995             NaN            0.007684\n",
+       "11361  Zimbabwe  1994             NaN            0.001739\n",
+       "11362  Zimbabwe  1990             NaN            0.000000"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdp_and_internet_use.tail(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c162f9c",
+   "metadata": {},
+   "source": [
+    "##\n",
+    "Subset the combined DataFrame to keep only the data for 2004, 2009, and 2014. Check that this happened correctly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "17640ea7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 0 entries\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column              Non-Null Count  Dtype  \n",
+      "---  ------              --------------  -----  \n",
+      " 0   Country             0 non-null      object \n",
+      " 1   Year                0 non-null      int64  \n",
+      " 2   GDP_Per_Capita      0 non-null      float64\n",
+      " 3   Internet_Users_Pct  0 non-null      float64\n",
+      "dtypes: float64(2), int64(1), object(1)\n",
+      "memory usage: 0.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "year_filter=gdp_and_internet_use['Year'].isin(['2009','2004','2014'])\n",
+    "gdp_and_internet_use=gdp_and_internet_use[year_filter]\n",
+    "gdp_and_internet_use.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1abae76",
+   "metadata": {},
+   "source": [
+    "##\n",
+    "Create three new DataFrames, one for 2004, one for 2009, and one for 2014. Give them meaningful names that aren't too long.\n",
+    "Created new dfs, checked to see if filter worked. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "bceb4d3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Empty DataFrame\n",
+      "Columns: [Country, Year, GDP_Per_Capita, Internet_Users_Pct]\n",
+      "Index: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "year_2004=gdp_and_internet_use[(gdp_and_internet_use['Year'] == '2004')]\n",
+    "year_2009=gdp_and_internet_use[(gdp_and_internet_use['Year'] == '2009')]\n",
+    "year_2014=gdp_and_internet_use[(gdp_and_internet_use['Year'] == '2014')]\n",
+    "print(year_2004.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a54c1ab",
+   "metadata": {},
+   "source": [
+    "##\n",
+    "Which country had the highest percentage of internet users in 2014? What was the percentage? (Try typing the first 3 letters of your DataFrame name and hitting the tab key for auto-complete options)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "2ac65568",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Empty DataFrame\n",
+      "Columns: [Country, Year, GDP_Per_Capita, Internet_Users_Pct]\n",
+      "Index: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(year_2014.loc[year_2014['Internet_Users_Pct'] == max('Internet_Users_Pct')])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2ae7609",
+   "id": "d0f07eb4",
    "metadata": {},
    "outputs": [],
    "source": []
