through high gdp top 10

--- a/notebooks/GDP_notebook.ipynb
+++ b/notebooks/GDP_notebook.ipynb
@@ -643,7 +643,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "ca79e14e",
+   "id": "e72ad1ef",
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f8dbf69",
+   "id": "bbb28abb",
    "metadata": {},
    "source": [
     "**##\n",
@@ -762,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "d6dfaef5",
+   "id": "d2c101ac",
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f3bb83d",
+   "id": "c83aedf1",
    "metadata": {},
    "source": [
     "**##Repeat for 2004**"
@@ -802,7 +802,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "fa9ec988",
+   "id": "cd584684",
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a5b813d",
+   "id": "16ebfe21",
    "metadata": {},
    "source": [
     "**#Repeat for 2009**"
@@ -854,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "ddbdd5cf",
+   "id": "6e8246c8",
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98a29cc6",
+   "id": "b13dd2d3",
    "metadata": {},
    "source": [
     "**##Which country had the highest gdp per capita in 2014? What was the gdp per capita?**"
@@ -906,7 +906,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "65bb8c3f",
+   "id": "e75f5344",
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27e6949b",
+   "id": "97dd267f",
    "metadata": {},
    "source": [
     "**#Which country had the lowest gdp per capita in 2014? What was the gdp per capita?**"
@@ -948,7 +948,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "1ec3bda4",
+   "id": "23a67e35",
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7012984f",
+   "id": "b6471792",
    "metadata": {},
    "source": [
     "**Create some scatterplots:\n",
@@ -993,7 +993,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "6df507a6",
+   "id": "3f7488d3",
    "metadata": {},
    "outputs": [
     {
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc4e892c",
+   "id": "4f4c0398",
    "metadata": {},
    "source": [
     "**Are there differences across years? What do the plots tell you about any relationship between these two variables? Enter your observations as a markdown cell.**"
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c470185a",
+   "id": "a3cfb671",
    "metadata": {},
    "source": [
     "1. % of internet users at lower GDP per capita has risen\n",
@@ -1070,7 +1070,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19e97e23",
+   "id": "4040984d",
    "metadata": {},
    "source": [
     "**Look at the distribution of gdp per capita values for 2014. Is it unimodal?**"
@@ -1078,7 +1078,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abfd05da",
+   "id": "b8b79879",
    "metadata": {},
    "source": [
     "1. Yes, there is a singular highest value in the data set "
@@ -1086,7 +1086,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bcdf14a",
+   "id": "5d058b4a",
    "metadata": {},
    "source": [
     "**What are the top 5 countries in terms of internet use in 2014?**"
@@ -1095,7 +1095,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "e8f40212",
+   "id": "331963f2",
    "metadata": {},
    "outputs": [
     {
@@ -1118,7 +1118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d10fe61",
+   "id": "91e722e3",
    "metadata": {},
    "source": [
     "**Create a DataFrame called top_5_internet from the combined DataFrame that has all three years for the 5 countries that had the greatest 2014 internet usage. You should have 15 rows. Check that this is true.**"
@@ -1127,7 +1127,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "6fffc3d8",
+   "id": "fa52b96c",
    "metadata": {},
    "outputs": [
     {
@@ -1156,7 +1156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b479d31",
+   "id": "2f797a04",
    "metadata": {},
    "source": [
     "**Create a seaborn FacetGrid to show the internet usage trend across the years 2004, 2009, and 2014 for these 5 countries (those with the highest reported internet use in 2014). Which country had the greatest growth between 2004 and 2014?**"
@@ -1165,7 +1165,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "3cf09338",
+   "id": "af08acbb",
    "metadata": {},
    "outputs": [
     {
@@ -1189,7 +1189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32f53f03",
+   "id": "879f4c2d",
    "metadata": {},
    "source": [
     "**Repeat the steps above to look at the trend for the 5 countries with the lowest 2014 internet usage. Which country has consistently had the least internet use?**"
@@ -1198,7 +1198,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "b7d53f29",
+   "id": "84dabe5b",
    "metadata": {},
    "outputs": [
     {
@@ -1222,7 +1222,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "7601715a",
+   "id": "329524db",
    "metadata": {},
    "outputs": [
     {
@@ -1252,7 +1252,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "187b5357",
+   "id": "72123b8b",
    "metadata": {},
    "outputs": [
     {
@@ -1276,16 +1276,61 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1427267d",
+   "id": "331ef08a",
    "metadata": {},
    "source": [
     "**Find the top 5 countries for 2014 in terms of GDP per capita; create a DataFrame to look at 10-year trends (use 2004, 2009, 2014 to look at the 10-year trend) in gdp per capita for the 5 countries with the highest 2014 GDP per capita. Use a seaborn facet grid for this.**"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "97c563ab",
+   "metadata": {},
+   "source": [
+    "**Repeat this one more time to look at 10-year trend for the 5 countries for 2014 with the lowest GDP per capita.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a03ff086",
+   "metadata": {},
+   "source": [
+    "**Is there anything surprising or unusual in any of these plots? Searching on the internet, can you find any possible explanations for unusual findings?**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "a6fce793",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   Country  Year  GDP_Per_Capita  Internet_Users_Pct\n",
+      "3721      Macao SAR, China  2014   156514.133850                 NaN\n",
+      "3691            Luxembourg  2014   108760.916030               94.67\n",
+      "5138                 Qatar  2014    95578.416973               91.49\n",
+      "5464             Singapore  2014    87808.663157               82.00\n",
+      "561                Bermuda  2014    77361.104881               96.80\n",
+      "1033        Cayman Islands  2014    66207.447230               74.10\n",
+      "6039           Switzerland  2014    65813.952509               87.00\n",
+      "737                 Brunei  2014    64192.234008                 NaN\n",
+      "4648                Norway  2014    62589.373548               96.30\n",
+      "6517  United Arab Emirates  2014    62378.657439               90.40\n"
+     ]
+    }
+   ],
+   "source": [
+    "gdp_high = year_2014.sort_values(by='GDP_Per_Capita', ascending=False)\n",
+    "print(gdp_high.head(10))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d125fd2",
+   "id": "b61db53a",
    "metadata": {},
    "outputs": [],
    "source": []
