started 10 year GDP trend

--- a/notebooks/GDP_notebook.ipynb
+++ b/notebooks/GDP_notebook.ipynb
@@ -643,7 +643,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "e72ad1ef",
+   "id": "c343f933",
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbb28abb",
+   "id": "6b16594b",
    "metadata": {},
    "source": [
     "**##\n",
@@ -762,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "d2c101ac",
+   "id": "4022e420",
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c83aedf1",
+   "id": "6ffae5fc",
    "metadata": {},
    "source": [
     "**##Repeat for 2004**"
@@ -802,7 +802,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "cd584684",
+   "id": "0c6f1566",
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16ebfe21",
+   "id": "8600fcf4",
    "metadata": {},
    "source": [
     "**#Repeat for 2009**"
@@ -854,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "6e8246c8",
+   "id": "95312222",
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b13dd2d3",
+   "id": "751b279d",
    "metadata": {},
    "source": [
     "**##Which country had the highest gdp per capita in 2014? What was the gdp per capita?**"
@@ -906,7 +906,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "e75f5344",
+   "id": "8a567f74",
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97dd267f",
+   "id": "084d2687",
    "metadata": {},
    "source": [
     "**#Which country had the lowest gdp per capita in 2014? What was the gdp per capita?**"
@@ -948,7 +948,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "23a67e35",
+   "id": "da576718",
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6471792",
+   "id": "84682d3b",
    "metadata": {},
    "source": [
     "**Create some scatterplots:\n",
@@ -993,7 +993,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "3f7488d3",
+   "id": "72bf1cff",
    "metadata": {},
    "outputs": [
     {
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f4c0398",
+   "id": "71cae30f",
    "metadata": {},
    "source": [
     "**Are there differences across years? What do the plots tell you about any relationship between these two variables? Enter your observations as a markdown cell.**"
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3cfb671",
+   "id": "c907be0b",
    "metadata": {},
    "source": [
     "1. % of internet users at lower GDP per capita has risen\n",
@@ -1070,7 +1070,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4040984d",
+   "id": "4e90881a",
    "metadata": {},
    "source": [
     "**Look at the distribution of gdp per capita values for 2014. Is it unimodal?**"
@@ -1078,7 +1078,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8b79879",
+   "id": "15aab084",
    "metadata": {},
    "source": [
     "1. Yes, there is a singular highest value in the data set "
@@ -1086,7 +1086,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d058b4a",
+   "id": "a5a5e8bc",
    "metadata": {},
    "source": [
     "**What are the top 5 countries in terms of internet use in 2014?**"
@@ -1095,7 +1095,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "331963f2",
+   "id": "c8c5ae3d",
    "metadata": {},
    "outputs": [
     {
@@ -1118,7 +1118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91e722e3",
+   "id": "4f13f7cf",
    "metadata": {},
    "source": [
     "**Create a DataFrame called top_5_internet from the combined DataFrame that has all three years for the 5 countries that had the greatest 2014 internet usage. You should have 15 rows. Check that this is true.**"
@@ -1127,7 +1127,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "fa52b96c",
+   "id": "806ad23b",
    "metadata": {},
    "outputs": [
     {
@@ -1156,7 +1156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f797a04",
+   "id": "82ddfd55",
    "metadata": {},
    "source": [
     "**Create a seaborn FacetGrid to show the internet usage trend across the years 2004, 2009, and 2014 for these 5 countries (those with the highest reported internet use in 2014). Which country had the greatest growth between 2004 and 2014?**"
@@ -1165,7 +1165,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "af08acbb",
+   "id": "d59265c0",
    "metadata": {},
    "outputs": [
     {
@@ -1189,7 +1189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "879f4c2d",
+   "id": "f498ca4c",
    "metadata": {},
    "source": [
     "**Repeat the steps above to look at the trend for the 5 countries with the lowest 2014 internet usage. Which country has consistently had the least internet use?**"
@@ -1198,7 +1198,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "84dabe5b",
+   "id": "ae88033e",
    "metadata": {},
    "outputs": [
     {
@@ -1222,7 +1222,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "329524db",
+   "id": "84ac35bb",
    "metadata": {},
    "outputs": [
     {
@@ -1252,7 +1252,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "72123b8b",
+   "id": "f05164d9",
    "metadata": {},
    "outputs": [
     {
@@ -1276,7 +1276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "331ef08a",
+   "id": "3a4a62e3",
    "metadata": {},
    "source": [
     "**Find the top 5 countries for 2014 in terms of GDP per capita; create a DataFrame to look at 10-year trends (use 2004, 2009, 2014 to look at the 10-year trend) in gdp per capita for the 5 countries with the highest 2014 GDP per capita. Use a seaborn facet grid for this.**"
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97c563ab",
+   "id": "fe446132",
    "metadata": {},
    "source": [
     "**Repeat this one more time to look at 10-year trend for the 5 countries for 2014 with the lowest GDP per capita.**"
@@ -1292,7 +1292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a03ff086",
+   "id": "8b2e3106",
    "metadata": {},
    "source": [
     "**Is there anything surprising or unusual in any of these plots? Searching on the internet, can you find any possible explanations for unusual findings?**"
@@ -1300,37 +1300,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "a6fce793",
+   "execution_count": 82,
+   "id": "382b0c19",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                   Country  Year  GDP_Per_Capita  Internet_Users_Pct\n",
-      "3721      Macao SAR, China  2014   156514.133850                 NaN\n",
-      "3691            Luxembourg  2014   108760.916030               94.67\n",
-      "5138                 Qatar  2014    95578.416973               91.49\n",
-      "5464             Singapore  2014    87808.663157               82.00\n",
-      "561                Bermuda  2014    77361.104881               96.80\n",
-      "1033        Cayman Islands  2014    66207.447230               74.10\n",
-      "6039           Switzerland  2014    65813.952509               87.00\n",
-      "737                 Brunei  2014    64192.234008                 NaN\n",
-      "4648                Norway  2014    62589.373548               96.30\n",
-      "6517  United Arab Emirates  2014    62378.657439               90.40\n"
+      "               Country  Year  GDP_Per_Capita  Internet_Users_Pct\n",
+      "3721  Macao SAR, China  2014   156514.133850                 NaN\n",
+      "3691        Luxembourg  2014   108760.916030               94.67\n",
+      "5138             Qatar  2014    95578.416973               91.49\n",
+      "5464         Singapore  2014    87808.663157               82.00\n",
+      "561            Bermuda  2014    77361.104881               96.80\n"
      ]
     }
    ],
    "source": [
     "gdp_high = year_2014.sort_values(by='GDP_Per_Capita', ascending=False)\n",
-    "print(gdp_high.head(10))"
+    "print(gdp_high.head(5))\n",
+    "10_year_gdp = newdf[newdf['Country'].isin(['Timor-Leste','Burundi','Guinea','Niger','Sierra Leone'])]\n",
+    "10_year_gdp =newdf.loc[newdf['GDP_Per_Capita']==year_2014['GDP_Per_Capita'].min(skipna=True), 'Country']\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b61db53a",
+   "id": "44b71f4b",
    "metadata": {},
    "outputs": [],
    "source": []
