created 10 year trend df

--- a/notebooks/GDP_notebook.ipynb
+++ b/notebooks/GDP_notebook.ipynb
@@ -1300,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 90,
    "id": "382b0c19",
    "metadata": {},
    "outputs": [
@@ -1308,6 +1308,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 238 entries, 3721 to 1047\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column              Non-Null Count  Dtype  \n",
+      "---  ------              --------------  -----  \n",
+      " 0   Country             238 non-null    object \n",
+      " 1   Year                238 non-null    int64  \n",
+      " 2   GDP_Per_Capita      238 non-null    float64\n",
+      " 3   Internet_Users_Pct  163 non-null    float64\n",
+      "dtypes: float64(2), int64(1), object(1)\n",
+      "memory usage: 9.3+ KB\n",
+      "None\n",
       "               Country  Year  GDP_Per_Capita  Internet_Users_Pct\n",
       "3721  Macao SAR, China  2014   156514.133850                 NaN\n",
       "3691        Luxembourg  2014   108760.916030               94.67\n",
@@ -1318,16 +1330,58 @@
     }
    ],
    "source": [
+    "# top 5 GDP in 2014\n",
     "gdp_high = year_2014.sort_values(by='GDP_Per_Capita', ascending=False)\n",
-    "print(gdp_high.head(5))\n",
-    "10_year_gdp = newdf[newdf['Country'].isin(['Timor-Leste','Burundi','Guinea','Niger','Sierra Leone'])]\n",
-    "10_year_gdp =newdf.loc[newdf['GDP_Per_Capita']==year_2014['GDP_Per_Capita'].min(skipna=True), 'Country']\n"
+    "#print to see countries\n",
+    "print(gdp_high.info())\n",
+    "#drop all but top 5 countries, replace df\n",
+    "gdp_high.drop(gdp_high.tail(233).index,\n",
+    "        inplace = True)\n",
+    "#print 6 rows to make sure it worked \n",
+    "print(gdp_high.head(6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "4114cdb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               Country  Year  GDP_Per_Capita  Internet_Users_Pct\n",
+      "561            Bermuda  2014    77361.104881           96.800000\n",
+      "566            Bermuda  2009    89961.982744           83.250000\n",
+      "571            Bermuda  2004    90195.811033           60.990867\n",
+      "3691        Luxembourg  2014   108760.916030           94.670000\n",
+      "3696        Luxembourg  2009   104932.811953           87.310000\n",
+      "3701        Luxembourg  2004   102708.212547           65.880000\n",
+      "3721  Macao SAR, China  2014   156514.133850                 NaN\n",
+      "3726  Macao SAR, China  2009    95939.340822                 NaN\n",
+      "3731  Macao SAR, China  2004    72944.409424                 NaN\n",
+      "5138             Qatar  2014    95578.416973           91.490000\n",
+      "5143             Qatar  2009    89954.519993           53.100000\n",
+      "5148             Qatar  2004    93748.301216           20.701648\n",
+      "5464         Singapore  2014    87808.663157           82.000000\n",
+      "5469         Singapore  2009    69466.581746           69.000000\n",
+      "5474         Singapore  2004    63901.716368           62.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "#create 10 year DF\n",
+    "#newdf is the combined 2009, 2014, 2004 dataframe from earlier\n",
+    "#gdp_high is the top 5 countries\n",
+    "gdp_10_year=newdf[newdf['Country'].isin(['Macao SAR, China', 'Luxembourg', 'Qatar', 'Singapore', 'Bermuda'])]\n",
+    "print(gdp_10_year)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44b71f4b",
+   "id": "e919caef",
    "metadata": {},
    "outputs": [],
    "source": []
